# poc-zeep-backend

./: .env  env.example  main.py  pyproject.toml
app/: config.py  iothub_http.py  iothub_sas.py  main.py  schemas.py
app/core/: config.py
app/routers/devices/: devices_control.py  devices_create.py  devices_delete.py  devices_get.py
app/schemas/: door.py  google_sheet.py
app/services/: csv_parser.py  devices.py
app/services/iothub/: iothub_consumer.py  iothub_http.py  iothub_sas.py
app/utils/: common.py  csv_parser.py  device_queue.py  normalize.py  pod_map.py
